--- a/mcq_gui/index.html
+++ b/mcq_gui/index.html
@@ -75,8 +75,8 @@
         <div class="card light-green accent-4">
             <div class="card-content white-text">
                 <span class="card-title">Begin Assessment Test</span>
-                <p>Click on the Start button to start the test. This is a preliminary test, consisting of 30 questions
-                , covering all subtopics on mensuration, and of varying difficulties, and the time limit is 45 minutes,
+                <p>Click on the Start button to start the test. This test consists of 30 questions
+                , covers topics on mensuration and questions have varying difficulties. The time limit is 45 minutes,
                  All the best ;-)</p>
             </div>
             <div class="card-action">
@@ -160,8 +160,7 @@
         <div class="card light-green accent-4">
             <div class="card-content white-text">
                 <span class="card-title">Thank You for Taking the Test</span>
-                <p>Click on the link Below to view solutions, your responses, Initial Proficiency Scores.
-                The 'Easy' modules have been unlocked for now</p>
+                <p>Thank you for taking the test. Your responses and time spent on each question has been saved successfully!</p>
             </div>
             <div class="card-action">
                 <a href="#" data-ng-click="">View Results and Analysis</a>
